Fix T51052: CacheFile Open crashes from Python

Note that bpy.data access makes more sense here,
but better not crash when called from Python.